feat: Enhance Repetition functionality by adding rescheduleFollowing flag and implementing rescheduling logic for future repetitions